# sbroad

./: .gitignore  .gitlab-ci.yml  .gitleaksignore  .gitmodules  .luacheckrc  AUTHORS  Cargo.toml  LICENSE  Makefile  README.md  audit.toml  build.rs  clippy.toml  deps.sh  docker-compose.yml  sbroad-scm-1.rockspec
.cargo/: config.toml
protocol/: CMakeLists.txt  README.md  cpath.lua  test-requirements.txt
protocol/cmake/: utils.cmake
protocol/src/: CMakeLists.txt
protocol/src/server/: CMakeLists.txt  server.c  server.h
protocol/src/tarantool/: CMakeLists.txt  diag.h  evio.c  evio.h  sio.c  sio.h
protocol/src/tarantool/trivia/: util.h
protocol/test/: CMakeLists.txt
protocol/test/luatest/: server_test.lua  suite.ini
sbroad-benches/: Cargo.toml
sbroad-benches/benches/: cbo.rs  parse.rs
sbroad-benches/src/: engine.rs
sbroad-cartridge/: Cargo.toml  Makefile  sbroad-scm-1.rockspec
sbroad-cartridge/cartridge/roles/: sbroad-router.lua  sbroad-storage.lua
sbroad-cartridge/src/: api.rs  cartridge.rs  init.lua  lib.rs  router.lua  rust.lua  storage.lua  utils.rs
sbroad-cartridge/src/api/: calculate_bucket_id.rs  exec_query.rs  helper.rs  invalidate_cached_schema.rs  statistics.rs
sbroad-cartridge/src/api/exec_query/: protocol.rs
sbroad-cartridge/src/cartridge/: config.rs  router.rs  storage.rs
sbroad-cartridge/src/cartridge/config/: tests.rs
sbroad-cartridge/stress-test/: README.md  check_tnt.sh  compare.lua  metrics.js
sbroad-cartridge/stress-test/groupby/: init.lua  k6.js
sbroad-cartridge/stress-test/insert/: data_generator.lua  init.lua  k6.js
sbroad-cartridge/stress-test/projection/: init.lua  k6.js
sbroad-cartridge/stress-test/projection_wide/: data_generator.lua  init.lua  k6.js
sbroad-cartridge/test_app/: README.md  init.lua  replicasets.yml  test_app-scm-1.rockspec
sbroad-cartridge/test_app/app/: utils.lua
sbroad-cartridge/test_app/app/roles/: api.lua  storage.lua
sbroad-cartridge/test_app/test/: helper.lua
sbroad-cartridge/test_app/test/configuration/: broken_cache_test.lua  sql_cache_test.lua
sbroad-cartridge/test_app/test/data/: config.yml  test_data.lua
sbroad-cartridge/test_app/test/helper/: cluster_async_replication.lua  cluster_no_replication.lua  cluster_sync_replication.lua  config_handler.lua
sbroad-cartridge/test_app/test/integration/: acl_test.lua  api_test.lua  arbitrary_expressions_test.lua  arithmetic_test.lua  array_test.lua  block_test.lua  broken_cache_test.lua  cte_test.lua  ddl_test.lua  delete_test.lua  empty_queries.lua  explain_test.lua  groupby_test.lua  insert_test.lua  join_test.lua  large_query_test.lua  left_outer_join_test.lua  limit_test.lua  motion_test.lua  operators_test.lua  options_test.lua  order_by_test.lua  parameters_test.lua  sql_cache_test.lua  subquery_as_expression_test.lua  target_queries_test.lua  trim_test.lua  union_test.lua  update_test.lua  uuid_test.lua  validate_schema_test.lua
sbroad-core/: Cargo.toml
sbroad-core/benches/: engine.rs  parse.rs
sbroad-core/src/: builtins.lua  cbo.rs  core-router.lua  core-storage.lua  core.lua  errors.rs  executor.rs  frontend.rs  helper.lua  init.lua  ir.rs  lib.rs  log.rs  otm.rs  utils.rs
sbroad-core/src/api/: invalidate_cached_schema.rs
sbroad-core/src/backend/: sql.rs
sbroad-core/src/backend/sql/: ir.rs  space.rs  tree.rs
sbroad-core/src/backend/sql/ir/: tests.rs
sbroad-core/src/backend/sql/tree/: tests.rs
sbroad-core/src/cbo/: helpers.rs  histogram.rs  selectivity.rs  tests.rs
sbroad-core/src/cbo/helpers/: tests.rs
sbroad-core/src/cbo/histogram/: normalization.rs  tests.rs
sbroad-core/src/cbo/selectivity/: tests.rs
sbroad-core/src/executor/: bucket.rs  engine.rs  hash.rs  ir.rs  lru.rs  protocol.rs  result.rs  shard.rs  tests.rs  vtable.rs
sbroad-core/src/executor/bucket/: tests.rs
sbroad-core/src/executor/engine/: helpers.rs  mock.rs
sbroad-core/src/executor/engine/helpers/: proxy.rs  storage.rs  vshard.rs
sbroad-core/src/executor/lru/: tests.rs
sbroad-core/src/executor/result/: tests.rs
sbroad-core/src/executor/tests/: between.rs  bucket_id.rs  cast.rs  concat.rs  empty_motion.rs  exec_plan.rs  frontend.rs  like.rs  not_eq.rs  not_in.rs  subtree.rs
sbroad-core/src/executor/vtable/: tests.rs
sbroad-core/src/frontend/: sql.rs
sbroad-core/src/frontend/sql/: ast.rs  ir.rs  query.pest  tree.rs
sbroad-core/src/frontend/sql/ast/: tests.rs
sbroad-core/src/frontend/sql/ir/: tests.rs
sbroad-core/src/ir/: acl.rs  aggregates.rs  api.rs  block.rs  ddl.rs  distribution.rs  explain.rs  expression.rs  function.rs  helpers.rs  node.rs  operator.rs  parameters.rs  relation.rs  tests.rs  transformation.rs  tree.rs  undo.rs  value.rs
sbroad-core/src/ir/api/: children.rs  constant.rs  parameter.rs
sbroad-core/src/ir/distribution/: tests.rs
sbroad-core/src/ir/explain/: execution_info.rs  tests.rs
sbroad-core/src/ir/explain/tests/: concat.rs  delete.rs  query_explain.rs
sbroad-core/src/ir/expression/: cast.rs  concat.rs  tests.rs  types.rs
sbroad-core/src/ir/helpers/: tests.rs
sbroad-core/src/ir/node/: acl.rs  block.rs  ddl.rs  expression.rs  plugin.rs  relational.rs  tests.rs  util.rs
sbroad-core/src/ir/operator/: groupby.rs  tests.rs
sbroad-core/src/ir/relation/: tests.rs
sbroad-core/src/ir/transformation/: bool_in.rs  dnf.rs  equality_propagation.rs  helpers.rs  merge_tuples.rs  not_push_down.rs  redistribution.rs  split_columns.rs
sbroad-core/src/ir/transformation/bool_in/: tests.rs
sbroad-core/src/ir/transformation/dnf/: tests.rs
sbroad-core/src/ir/transformation/equality_propagation/: tests.rs
sbroad-core/src/ir/tree/: and.rs  eq_class.rs  expression.rs  relation.rs  subtree.rs  tests.rs  traversal.rs
sbroad-core/src/ir/value/: double.rs  tests.rs
sbroad-core/src/otm/: fiber.rs  statistics.rs
sbroad-core/src/otm/statistics/: eviction.rs  table.rs
sbroad-core/stress-test/: data_generator.lua
sbroad-core/stress-test/target_data/: generator.lua
sbroad-core/test_app/: cartridge.pre-build
sbroad-core/tests/artifactory/ir/: plan_no_top.yaml  plan_oor_top.yaml
(+300 files in other folders)
