[package]
name = "sbroad"
version = "0.1.0"
authors = [
    "Picodata"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
base64ct = { version = "1.5", features = ["alloc"] }
decimal = "2.1.0"
hash32 = "0.2"
itertools = "0.10.3"
pest = "2.0"
pest_derive = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sha2 = "0.10"
tarantool = { git = "https://sbroad-cargo-token:t-nZyqJVVuhGQv17BX6v@gitlab.com/picodata/picodata/tarantool-module.git", rev="d8921ec6"}
traversal = "0.1.2"
yaml-rust = "0.4.1"
rmp-serde = "0.14"

[dev-dependencies]
pretty_assertions = "1.0.0"
criterion = "0.3"

[lib]
name = "sbroad"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "parse"
harness = false
