[package]
name = "sbroad"
version = "0.1.0"
authors = [
    "Picodata"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
base64ct = { version = "1.5", features = ["alloc"] }
hash32 = "0.2"
itertools = "0.10"
pest = "2.0"
pest_derive = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sha2 = "0.10"
tarantool = { git = "https://cargo:hVkdxmfLJRpHGFs3-9xx@git.picodata.io/picodata/picodata/tarantool-module.git", rev = "662f410" }
traversal = "0.1"
yaml-rust = "0.4"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "1.0"
rmp-serde = "0.14"

[build-dependencies]
cc = "1.0"

[lib]
name = "sbroad"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "parse"
harness = false
