[package]
name = "sbroad-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbroad-core = { path = "../sbroad-core", version = "0.1", features = ["mock"] }
tarantool = { git = "https://git.picodata.io/picodata/picodata/tarantool-module.git", features = ["picodata"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parse"
harness = false
