[package]
name = "sbroad-benches"
version = "0.1.0"
rust-version = "1.71.0"
authors = [
    "Picodata"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbroad-core = { path = "../sbroad-core", version = "0.1", features = ["mock"] }
tarantool = { git = "https://git.picodata.io/picodata/picodata/tarantool-module.git" }
pest = "2.0"
pest_derive = "2.0"
bincode = "1.3.3"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "cbo"
harness = false
