[package]
name = "sbroad-cartridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.5", features = ["alloc"] }
bincode = "1.3"
blake3 = "1.3"
sbroad-core = { path = "../sbroad-core", version = "0.1" }
tarantool = { git = "https://git.picodata.io/picodata/picodata/tarantool-module.git", features = ["picodata", "schema"] }
sbroad-proc = { path = "../sbroad-proc", version = "0.1" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
opentelemetry = "0.17"
opentelemetry-jaeger = "0.16"
rand = "0.8"
rmp = "0.8"
rmp-serde = "0.14"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
yaml-rust = "0.4"

[dev-dependencies]
pretty_assertions = "1.3"

[lib]
name = "sbroad_cartridge"
crate-type = ["cdylib", "rlib"]

[features]
mock = ["sbroad-core/mock"]
