[package]
name = "sbroad-core"
version = "0.1.0"
authors = [
    "Picodata"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
base64ct = { version = "1.5", features = ["alloc"] }
bincode = "1.3"
blake3 = "1.3"
hash32 = "0.2"
itertools = "0.10"
lazy_static = "1.4"
opentelemetry = "0.17"
opentelemetry-jaeger = "0.16"
pest = "2.0"
pest_derive = "2.0"
rand = "0.8"
sbroad-proc = { path = "../sbroad-proc", version = "0.1" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
tarantool = { git = "https://git.picodata.io/picodata/picodata/tarantool-module.git", features = ["picodata", "schema"] }
traversal = "0.1"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
pretty_assertions = "1.3"
rmp-serde = "0.14"

[lib]
name = "sbroad"
crate-type = ["cdylib", "rlib"]

[features]
mock = []
