[package]
name = "sbroad-core"
version = "0.1.0"
rust-version = "1.71.0"
authors = [
    "Picodata"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
ahash = "0.7"
base64ct = { version = "1.5", features = ["alloc"] }
bincode = "1.3"
blake3 = "1.3"
hash32 = "0.2"
itertools = "0.10"
opentelemetry = "0.17"
pest = "2.0"
pest_derive = "2.0"
rand = "0.8"
rmp-serde = "1.0"
sbroad-proc = { path = "../sbroad-proc", version = "0.1" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
tarantool = { git = "https://git.picodata.io/picodata/picodata/tarantool-module.git" }
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
smol_str = { version = "0.2.1", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.3"

[lib]
name = "sbroad"
crate-type = ["cdylib", "rlib"]

[features]
mock = []
tracing = []
